See the end for copying conditions.

Note that changes to the GNU SASL Library is documented in lib/NEWS.
This file track changes to the remaining, non-library, parts of GNU
SASL.  That include the manual, the command line tool, and self tests.

* Version 0.2.23 (unreleased)

** Improve CRAM-MD5 self-test to detect if challenges are the same.

** Use gettext 0.17.

** Update gnulib files.

* Version 0.2.22 (released 2007-10-08)

** Development git tree moved to savannah.
See <https://savannah.gnu.org/projects/gsasl/>.

** Fix warnings when building the tool 'gsasl'.

** Update gnulib files.

* Version 0.2.21 (released 2007-08-22)

** Fix typos in manual.
Tiny patch from Brad Hards <bradh@frogmouth.net>.

** Update gnulib files.

* Version 0.2.20 (released 2007-08-11)

** Update gnulib files.

* Version 0.2.19 (released 2007-08-09)

** Command-line tools, examples, etc are now licensed under the
** GPL version 3 (or later).
The library remains licensed under LGPL version 2.1 (or later).

** Updated documentation as per license change.

** Update gnulib files.

** Update translations.

* Version 0.2.18 (released 2007-06-07)

** Update gnulib files.
Fixes cross-compilation to uClinux.

* Version 0.2.17 (released 2007-06-01)

** GNU SASL is now developed using Git instead of CVS.
A public git mirror is available from <http://repo.or.cz/w/gsasl.git>.

** Update gnulib files.

** Polish, Swedish and Vietnamese translations updated.
Thanks to Jakub Bogusz, Daniel Nylander, and Clytie Siddall.

* Version 0.2.16 (released 2007-04-20)

** Fix IMAP protocol usage in the 'gsasl' command-line tool server.

** Support GSSAPI server in 'gsasl' command-line tool.

** Add self-test of the gsasl_check_version API.

** Translation updates.

** Update of gnulib files.

** Now uses autoconf 2.61, automake 1.10, gettext 0.16.1.

* Version 0.2.15 (released 2006-08-22)

** Changed libgsasl shared library version.
The shared library version was not incremented correctly in the last