@@ -9,7 +9,7 @@
 # the same distribution terms as the rest of that program.
 #
 # Generated by gnulib-tool.
-# Reproduce by: gnulib-tool --import --dir=. --local-dir=gl/override --lib=libgl --source-base=gl --m4-base=gl/m4 --doc-base=doc --aux-dir=build-aux --libtool --macro-prefix=gl error exit fdl gendocs getaddrinfo getopt getpass gpl-3.0 lgpl-2.1 maintainer-makefile progname quote readline strdup striconv sys_select unistd
+# Reproduce by: gnulib-tool --import --dir=. --local-dir=gl/override --lib=libgl --source-base=gl --m4-base=gl/m4 --doc-base=doc --aux-dir=build-aux --libtool --macro-prefix=gl error exit fdl gendocs getaddrinfo getopt getpass gpl-3.0 lgpl-2.1 maintainer-makefile progname quote readline strdup striconv sys_select unistd version-etc
 
 AUTOMAKE_OPTIONS = 1.5 gnits
 
@@ -743,6 +743,12 @@ EXTRA_DIST += asnprintf.c float+.h printf-args.c printf-args.h printf-parse.c pr
 EXTRA_libgl_la_SOURCES += asnprintf.c printf-args.c printf-parse.c vasnprintf.c
 
 ## end   gnulib module vasnprintf
+
+## begin gnulib module version-etc
+
+libgl_la_SOURCES += version-etc.h version-etc.c
+
+## end   gnulib module version-etc
 
 ## begin gnulib module wchar
 
