@@ -15,11 +15,11 @@
 
 
 # Specification in the form of a command-line invocation:
-#   gnulib-tool --import --dir=. --local-dir=gl/override --lib=libgl --source-base=gl --m4-base=gl/m4 --doc-base=doc --aux-dir=build-aux --libtool --macro-prefix=gl error exit fdl gendocs getaddrinfo getopt getpass gpl-3.0 lgpl-2.1 maintainer-makefile progname quote readline strdup striconv sys_select unistd
+#   gnulib-tool --import --dir=. --local-dir=gl/override --lib=libgl --source-base=gl --m4-base=gl/m4 --doc-base=doc --aux-dir=build-aux --libtool --macro-prefix=gl error exit fdl gendocs getaddrinfo getopt getpass gpl-3.0 lgpl-2.1 maintainer-makefile progname quote readline strdup striconv sys_select unistd version-etc
 
 # Specification in the form of a few gnulib-tool.m4 macro invocations:
 gl_LOCAL_DIR([gl/override])
-gl_MODULES([error exit fdl gendocs getaddrinfo getopt getpass gpl-3.0 lgpl-2.1 maintainer-makefile progname quote readline strdup striconv sys_select unistd])
+gl_MODULES([error exit fdl gendocs getaddrinfo getopt getpass gpl-3.0 lgpl-2.1 maintainer-makefile progname quote readline strdup striconv sys_select unistd version-etc])
 gl_AVOID([])
 gl_SOURCE_BASE([gl])
 gl_M4_BASE([gl/m4])
