@@ -1,5 +1,5 @@
 /* internal.h --- internal header file for gsasl
- * Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007  Simon Josefsson
+ * Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 2008  Simon Josefsson
  *
  * This file is part of GNU SASL.
  *
@@ -60,6 +60,7 @@
 #include "getaddrinfo.h"
 #include "readline.h"
 #include "quote.h"
+#include "version-etc.h"
 
 /* Get i18n. */
 #include <gettext.h>
